@@ -1,5 +1,11 @@
 2007-01-16  Damon Chaplin  <damon@gnome.org>
 
+	* gtkdoc-mkdb.in: support "Include" setting in section docs in source
+	code, same as <INCLUDE>...</INCLUDE> setting in sections.txt file.
+	Part of #395023.
+
+2007-01-16  Damon Chaplin  <damon@gnome.org>
+
 	* gtkdoc-mkdb.in (OutputMacro): try to line up multiple lines of
 	arguments if possible. #384249
 
